--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = cfeb4da24
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 5f7cc3562
+	trimbase = 
