--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = b9f097924
+	base = fe52e38b2
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = b9f097924
