--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = 5a5111c8a
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 7d2133f7f
+	trimbase = 
