--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = b1535375a
+	base = 53134947c
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = b1535375a
