--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = 4618c8aac
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 7edb6a9d0
+	trimbase = 
