--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = d74bc3af9
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = b3df22e2d
+	trimbase = 
