--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = 76aec736c
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = de8799d42
+	trimbase = 
