--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 9963c829f
+	base = 6e6240709
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 9963c829f
