--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 8c7b0ca0d
+	base = 260bcd094
 	trim = moveit_common
-	trimbase = 
+	trimbase = 8c7b0ca0d
