--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = a32da070f
+	base = 39e13a231
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = a32da070f
