--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = cafa1d8b0
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 593db1a41
+	trimbase = 
