--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 8258f6ac5
+	base = 9acb65de4
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 8258f6ac5
