--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = 0fe427fad
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 7d954a9e1
+	trimbase = 
