--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 9de01eadb
+	base = 72477167d
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 9de01eadb
