--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = f838d511b
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = f72375978
+	trimbase = 
