--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 6e6ba08c4
+	base = 871c936f4
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 
+	trimbase = 6e6ba08c4
