--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = e54bc5fc1
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 970155dc7
+	trimbase = 
