--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 139feea5f
+	base = c2e21d495
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = 139feea5f
