--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = cc9316234
+	base = 1d4639bf7
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = cc9316234
