--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = 6eb67e196
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 3cf401245
+	trimbase = 
