--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = aacd98eac
+	base = d56fb7051
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = aacd98eac
