--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 0e1bbd12a
+	base = 5ffa0298f
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = 0e1bbd12a
