--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 2f30acdc9
+	base = c6770d595
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = 2f30acdc9
