--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 9d304686b
+	base = e93b78149
 	trim = moveit_planners/stomp
-	trimbase = 
+	trimbase = 9d304686b
