--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 7a298e95c
+	base = 052aa40c9
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = 7a298e95c
