--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 711c7b192
+	base = def954774
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 711c7b192
