--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = ad5918659
+	base = 60987a4d0
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = ad5918659
