--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = cbccc7686
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 3ca26f2dd
+	trimbase = 
