--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = ad6b97c0c
+	base = 7d7e1b92b
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = ad6b97c0c
