--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 4355b51b6
+	base = 065ccb069
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 4355b51b6
