--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 2b1d2d622
+	base = e2ce300eb
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = 2b1d2d622
