--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = fdea3c16f
+	base = 2557f811e
 	trim = moveit_ros/tests
-	trimbase = 
+	trimbase = fdea3c16f
