--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 4adfdd8a4
+	base = 1b5d43347
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 4adfdd8a4
