--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 5fa332c13
+	base = c0e3f60ca
 	trim = moveit_ros/trajectory_cache
-	trimbase = 
+	trimbase = 5fa332c13
