--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 93b84f5b6
+	base = 4008b3e0e
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = 93b84f5b6
