--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 6365d4ee7
+	base = f9ada2437
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 6365d4ee7
