--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = ed65a487b
+	base = 0adc241c4
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = ed65a487b
