--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 980f4e7e4
+	base = 3be6f52b3
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 980f4e7e4
