--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 849d72d3c
+	base = 8fd2391cb
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = 849d72d3c
