--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = abe349701
+	base = 0740c7a9e
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = abe349701
