--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 35a115b6d
+	base = 517bafc0d
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 35a115b6d
