--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 85d89406a
+	base = e936708f0
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 85d89406a
