--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 9ee38be7d
+	base = 6f5ed6db4
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = 9ee38be7d
